--- a/code/index.html
+++ b/code/index.html
@@ -25,7 +25,7 @@
             <input type="button" value="Show Possible Words" onclick="ShowWordCandidates()"/>
             <input type="button" value="Commit The Board" onclick="Commit()"/>
             <input type="button" value="Clear Uncommitted Changes" onclick="ClearLettersOnBoard()"/>
-            <input type="button" value="Clear All" onclick="ClearAllLettersOnBoard()"/>
+            <input type="button" value="Clear Table" onclick="ClearAllLettersOnBoard()"/>
         </div>
     </div>
 
